# src/main/java/sk/ardevop/nlp/skquadmanager/controller/CorpusApiController.java
@@ -1,8 +1,13 @@
 package sk.ardevop.nlp.skquadmanager.controller;
 
+import static java.util.stream.Collectors.toList;
+
+import java.util.List;
 import java.util.Optional;
 import javax.validation.Valid;
+import one.util.streamex.StreamEx;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
 import sk.ardevop.nlp.skquadmanager.api.CorpusApi;
 import sk.ardevop.nlp.skquadmanager.controller.mapper.RestDTOMapper;
@@ -11,6 +16,7 @@ import sk.ardevop.nlp.skquadmanager.model.CorpusRestDTO;
 import sk.ardevop.nlp.skquadmanager.repository.CorpusRepository;
 
 @RestController
+@CrossOrigin("*")
 public class CorpusApiController implements CorpusApi {
 
   private final RestDTOMapper restDTOMapper;
@@ -36,4 +42,11 @@ public class CorpusApiController implements CorpusApi {
             restDTOMapper.corpusRestDTO(
                 corpusRepository.findById(corpusId).orElse(null))));
   }
+
+  @Override
+  public ResponseEntity<List<CorpusRestDTO>> listCorpus() {
+    return ResponseEntity
+        .ok(StreamEx.of(corpusRepository.findAll().iterator()).map(restDTOMapper::corpusRestDTO).collect(toList()));
+  }
+
 }
