# src/main/java/sk/ardevop/nlp/skquadmanager/entity/Dataset.java
@@ -1,5 +1,10 @@
 package sk.ardevop.nlp.skquadmanager.entity;
 
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.ManyToOne;
+import javax.persistence.OneToMany;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -7,20 +12,24 @@ import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
-import org.springframework.data.annotation.Id;
-import org.springframework.data.mongodb.core.mapping.Document;
+import org.hibernate.annotations.GenericGenerator;
 
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
 @Builder
-@Document
+@Entity
 public class Dataset {
 
   @Id
+  @GeneratedValue(generator="system-uuid")
+  @GenericGenerator(name="system-uuid", strategy = "uuid")
   private String id;
   private String title;
   private String source;
 
-  private List<Paragraph> paragraphs = new ArrayList<>();
+  @ManyToOne
+  private Corpus corpus;
+  @OneToMany
+  private List<Paragraph> paragraphs;
 }
