# src/main/java/sk/ardevop/nlp/skquadmanager/entity/Paragraph.java
@@ -1,5 +1,11 @@
 package sk.ardevop.nlp.skquadmanager.entity;
 
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.Lob;
+import javax.persistence.ManyToOne;
+import javax.persistence.OneToMany;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -7,19 +13,24 @@ import lombok.NoArgsConstructor;
 
 import java.util.ArrayList;
 import java.util.List;
-import org.springframework.data.annotation.Id;
-import org.springframework.data.mongodb.core.mapping.Document;
+import org.hibernate.annotations.GenericGenerator;
 
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
 @Builder
-@Document
+@Entity
 public class Paragraph {
 
   @Id
+  @GeneratedValue(generator="system-uuid")
+  @GenericGenerator(name="system-uuid", strategy = "uuid")
   private String id;
-  private List<Qas> qas = new ArrayList<>();
+  @OneToMany
+  private List<Question> qas;
+  @ManyToOne
+  private Dataset dataset;
+  @Lob
   private String context;
 }
 
